--- a/passvault-client/src/main/java/org/passvault/client/generator/PasswordGeneratorForm.form
+++ b/passvault-client/src/main/java/org/passvault/client/generator/PasswordGeneratorForm.form
@@ -3,12 +3,12 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="535" height="410"/>
+      <xy x="20" y="20" width="535" height="350"/>
     </constraints>
     <properties>
-      <minimumSize width="450" height="400"/>
+      <minimumSize width="450" height="300"/>
       <name value="Password Generator"/>
-      <preferredSize width="450" height="400"/>
+      <preferredSize width="450" height="300"/>
     </properties>
     <border type="none"/>
     <children>
@@ -52,7 +52,7 @@
           </component>
         </children>
       </grid>
-      <grid id="7a46b" binding="optionsPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="7a46b" binding="optionsPanel" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="5" left="15" bottom="10" right="15"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -64,46 +64,21 @@
         <children>
           <component id="6db54" class="javax.swing.JLabel" binding="characterSetLabel">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Characters"/>
             </properties>
           </component>
-          <grid id="acdc" binding="specialCharactersPanel" layout-manager="BorderLayout" hgap="10" vgap="0">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="6f3d" class="javax.swing.JCheckBox" binding="specialChacactersCheckBox" default-binding="true">
-                <constraints border-constraint="West"/>
-                <properties>
-                  <alignmentX value="0.5"/>
-                  <selected value="true"/>
-                  <text value="Special Chacacters"/>
-                </properties>
-              </component>
-              <component id="44ca1" class="javax.swing.JTextArea" binding="specialCharactersTextArea">
-                <constraints border-constraint="Center"/>
-                <properties>
-                  <alignmentX value="0.5"/>
-                  <lineWrap value="false"/>
-                  <margin top="0" left="0" bottom="0" right="0"/>
-                  <minimumSize width="100" height="18"/>
-                  <preferredSize width="-1" height="-1"/>
-                </properties>
-              </component>
-            </children>
-          </grid>
-          <vspacer id="7c15">
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
-          <grid id="1eea8" binding="passwordLengthPanel" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <grid id="1eea8" binding="passwordLengthPanel" layout-manager="FormLayout">
+            <rowspec value="center:d:grow"/>
+            <colspec value="fill:max(d;4px):noGrow"/>
+            <colspec value="left:9dlu:noGrow"/>
+            <colspec value="fill:48px:noGrow"/>
+            <colspec value="left:4dlu:noGrow"/>
+            <colspec value="fill:d:grow"/>
+            <colspec value="left:4dlu:noGrow"/>
+            <colspec value="fill:d:grow"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -113,6 +88,7 @@
               <component id="9e2c0" class="javax.swing.JLabel" binding="passwordLengthLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <forms/>
                 </constraints>
                 <properties>
                   <text value="Password Length"/>
@@ -120,7 +96,8 @@
               </component>
               <component id="dc906" class="javax.swing.JSlider" binding="passwordLengthSlider">
                 <constraints>
-                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <forms defaultalign-horz="false"/>
                 </constraints>
                 <properties>
                   <maximum value="128"/>
@@ -132,19 +109,109 @@
               </component>
               <component id="404b0" class="javax.swing.JFormattedTextField" binding="passwordLengthTextField">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <forms/>
                 </constraints>
                 <properties>
                   <text value=""/>
                 </properties>
               </component>
-              <hspacer id="3ff90">
-                <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </hspacer>
             </children>
           </grid>
+          <grid id="54456" binding="specialCharactersPanel" layout-manager="FormLayout">
+            <rowspec value="center:d:grow"/>
+            <colspec value="fill:max(d;4px):noGrow"/>
+            <colspec value="left:5dlu:noGrow"/>
+            <colspec value="fill:50px:noGrow"/>
+            <colspec value="left:0dlu:grow(0.19999999999999998)"/>
+            <colspec value="fill:d:noGrow"/>
+            <colspec value="left:5dlu:noGrow"/>
+            <colspec value="fill:d:grow"/>
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="b0a48" class="javax.swing.JLabel" binding="specialCharactersLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <forms/>
+                </constraints>
+                <properties>
+                  <text value="Special Characters"/>
+                </properties>
+              </component>
+              <component id="44ca1" class="javax.swing.JTextArea" binding="specialCharactersTextArea">
+                <constraints>
+                  <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <forms defaultalign-horz="false" defaultalign-vert="false"/>
+                </constraints>
+                <properties>
+                  <alignmentX value="0.5"/>
+                  <lineWrap value="false"/>
+                  <margin top="0" left="0" bottom="0" right="0"/>
+                  <minimumSize width="100" height="18"/>
+                  <preferredSize width="-1" height="-1"/>
+                </properties>
+              </component>
+              <component id="a8e0f" class="javax.swing.JFormattedTextField" binding="specialCharactersCountField">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <forms/>
+                </constraints>
+                <properties>
+                  <text value=""/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="3c288" binding="alphaNumericCharactersPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="89328" class="javax.swing.JCheckBox" binding="lowercaseAlphabetCheckBox">
+                <constraints/>
+                <properties>
+                  <text value="Lowercase (a-z)"/>
+                </properties>
+              </component>
+              <component id="e44a7" class="javax.swing.JCheckBox" binding="uppercaseAlphabetCheckBox">
+                <constraints/>
+                <properties>
+                  <text value="Uppercase (A-Z)"/>
+                </properties>
+              </component>
+              <component id="f9b20" class="javax.swing.JCheckBox" binding="numbersCheckBox">
+                <constraints/>
+                <properties>
+                  <text value="Numbers (0-9)"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <component id="1cb24" class="javax.swing.JSeparator" binding="separator1">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="81de3" class="javax.swing.JCheckBox" binding="ambiguousCharactersCheckBox">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Avoid Ambiguous Characters (0 and O, I and l, etc.)"/>
+            </properties>
+          </component>
+          <vspacer id="94ac">
+            <constraints>
+              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
         </children>
       </grid>
     </children>
