password generator finished

--- a/passvault-client/src/main/java/org/passvault/client/generator/PasswordGeneratorForm.form
+++ b/passvault-client/src/main/java/org/passvault/client/generator/PasswordGeneratorForm.form
@@ -3,17 +3,22 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="535" height="350"/>
+      <xy x="20" y="20" width="535" height="409"/>
     </constraints>
     <properties>
       <minimumSize width="450" height="300"/>
       <name value="Password Generator"/>
-      <preferredSize width="450" height="300"/>
+      <preferredSize width="450" height="350"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="a6a2f" binding="generatorPanel" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="5" left="15" bottom="10" right="15"/>
+      <grid id="a6a2f" binding="generatorPanel" layout-manager="FormLayout">
+        <rowspec value="center:d:grow"/>
+        <colspec value="fill:d:grow"/>
+        <colspec value="left:4dlu:noGrow"/>
+        <colspec value="fill:d:grow"/>
+        <colspec value="left:4dlu:noGrow"/>
+        <colspec value="fill:d:grow"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -24,7 +29,8 @@
         <children>
           <component id="7e510" class="javax.swing.JButton" binding="regenerateButton" default-binding="true">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <forms/>
             </constraints>
             <properties>
               <text value="Regenerate"/>
@@ -32,7 +38,8 @@
           </component>
           <component id="9aecf" class="javax.swing.JButton" binding="copyButton" default-binding="true">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <forms/>
             </constraints>
             <properties>
               <text value="Copy"/>
@@ -40,19 +47,22 @@
           </component>
           <component id="281e9" class="javax.swing.JTextArea" binding="passwordTextArea">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
               </grid>
+              <forms/>
             </constraints>
             <properties>
+              <columns value="0"/>
               <editable value="true"/>
               <lineWrap value="true"/>
               <opaque value="true"/>
+              <rows value="5"/>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="7a46b" binding="optionsPanel" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="7a46b" binding="optionsPanel" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="5" left="15" bottom="10" right="15"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -73,11 +83,9 @@
           <grid id="1eea8" binding="passwordLengthPanel" layout-manager="FormLayout">
             <rowspec value="center:d:grow"/>
             <colspec value="fill:max(d;4px):noGrow"/>
-            <colspec value="left:9dlu:noGrow"/>
-            <colspec value="fill:48px:noGrow"/>
             <colspec value="left:4dlu:noGrow"/>
             <colspec value="fill:d:grow"/>
-            <colspec value="left:4dlu:noGrow"/>
+            <colspec value="left:9dlu:noGrow"/>
             <colspec value="fill:d:grow"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -96,39 +104,39 @@
               </component>
               <component id="dc906" class="javax.swing.JSlider" binding="passwordLengthSlider">
                 <constraints>
-                  <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                   <forms defaultalign-horz="false"/>
                 </constraints>
                 <properties>
+                  <majorTickSpacing value="8"/>
                   <maximum value="128"/>
                   <minimum value="1"/>
+                  <minorTickSpacing value="4"/>
                   <paintLabels value="false"/>
                   <paintTicks value="false"/>
                   <value value="32"/>
                 </properties>
               </component>
-              <component id="404b0" class="javax.swing.JFormattedTextField" binding="passwordLengthTextField">
+              <component id="4f462" class="javax.swing.JSpinner" binding="passwordLengthSpinner">
                 <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                  <forms/>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <forms defaultalign-horz="false"/>
                 </constraints>
-                <properties>
-                  <text value=""/>
-                </properties>
+                <properties/>
               </component>
             </children>
           </grid>
           <grid id="54456" binding="specialCharactersPanel" layout-manager="FormLayout">
             <rowspec value="center:d:grow"/>
             <colspec value="fill:max(d;4px):noGrow"/>
-            <colspec value="left:5dlu:noGrow"/>
-            <colspec value="fill:50px:noGrow"/>
-            <colspec value="left:0dlu:grow(0.19999999999999998)"/>
+            <colspec value="left:4dlu:noGrow"/>
             <colspec value="fill:d:noGrow"/>
-            <colspec value="left:5dlu:noGrow"/>
+            <colspec value="left:4dlu:noGrow"/>
+            <colspec value="fill:d:noGrow"/>
+            <colspec value="left:15dlu:noGrow"/>
             <colspec value="fill:d:grow"/>
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -155,20 +163,18 @@
                   <preferredSize width="-1" height="-1"/>
                 </properties>
               </component>
-              <component id="a8e0f" class="javax.swing.JFormattedTextField" binding="specialCharactersCountField">
+              <component id="c3ffa" class="javax.swing.JSpinner" binding="specialCharactersSpinner">
                 <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                  <forms/>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <forms defaultalign-horz="false"/>
                 </constraints>
-                <properties>
-                  <text value=""/>
-                </properties>
+                <properties/>
               </component>
             </children>
           </grid>
           <grid id="3c288" binding="alphaNumericCharactersPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -212,6 +218,14 @@
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
+          <component id="df70b" class="javax.swing.JButton" binding="resetToDefaultsButton">
+            <constraints>
+              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Reset to Defaults"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
