--- a/passvault-client/src/main/java/org/passvault/client/LoginForm.form
+++ b/passvault-client/src/main/java/org/passvault/client/LoginForm.form
@@ -26,7 +26,7 @@
           </component>
         </children>
       </grid>
-      <grid id="1c203" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="1c203" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -42,21 +42,13 @@
             </constraints>
             <properties/>
           </component>
-          <component id="652b0" class="javax.swing.JCheckBox" binding="serverSyncCheckBox" default-binding="true">
+          <component id="8b84a" class="javax.swing.JButton" binding="openButton" custom-create="true" default-binding="true">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Server Sync"/>
+              <text value="Open"/>
             </properties>
-          </component>
-          <component id="84d28" class="javax.swing.JTextField" binding="textField2" default-binding="true">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
           </component>
         </children>
       </grid>
