--- a/passvault-client/src/main/java/org/passvault/client/generator/PasswordGeneratorForm.form
+++ b/passvault-client/src/main/java/org/passvault/client/generator/PasswordGeneratorForm.form
@@ -27,7 +27,7 @@
         </properties>
         <border type="line" title="Generator"/>
         <children>
-          <component id="7e510" class="javax.swing.JButton" binding="regenerateButton" default-binding="true">
+          <component id="7e510" class="javax.swing.JButton" binding="regenerateButton" custom-create="true" default-binding="true">
             <constraints>
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
               <forms/>
@@ -36,7 +36,7 @@
               <text value="Regenerate"/>
             </properties>
           </component>
-          <component id="9aecf" class="javax.swing.JButton" binding="copyButton" default-binding="true">
+          <component id="9aecf" class="javax.swing.JButton" binding="copyButton" custom-create="true" default-binding="true">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
               <forms/>
