--- a/passvault-client/src/main/java/org/passvault/client/generator/PasswordGeneratorForm.form
+++ b/passvault-client/src/main/java/org/passvault/client/generator/PasswordGeneratorForm.form
@@ -16,21 +16,24 @@
         <rowspec value="center:d:grow"/>
         <colspec value="fill:d:grow"/>
         <colspec value="left:4dlu:noGrow"/>
-        <colspec value="fill:d:grow"/>
+        <colspec value="right:d:noGrow"/>
         <colspec value="left:4dlu:noGrow"/>
-        <colspec value="fill:d:grow"/>
+        <colspec value="right:d:grow"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <name value=""/>
         </properties>
-        <border type="line" title="Generator"/>
+        <border type="none" title="Generator">
+          <font/>
+          <color color="-2104859"/>
+        </border>
         <children>
-          <component id="7e510" class="javax.swing.JButton" binding="regenerateButton" custom-create="true" default-binding="true">
+          <component id="7e510" class="javax.swing.JButton" binding="regenerateButton" default-binding="true">
             <constraints>
-              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-              <forms/>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+              <forms defaultalign-horz="false"/>
             </constraints>
             <properties>
               <text value="Regenerate"/>
@@ -39,7 +42,7 @@
           <component id="9aecf" class="javax.swing.JButton" binding="copyButton" custom-create="true" default-binding="true">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-              <forms/>
+              <forms defaultalign-horz="false"/>
             </constraints>
             <properties>
               <text value="Copy"/>
@@ -70,7 +73,9 @@
         <properties>
           <name value="Options"/>
         </properties>
-        <border type="line" title="Options"/>
+        <border type="none" title="Options">
+          <color color="-2104859"/>
+        </border>
         <children>
           <component id="6db54" class="javax.swing.JLabel" binding="characterSetLabel">
             <constraints>
