--- a/passvault-client/src/main/java/org/passvault/client/vault/VaultForm.form
+++ b/passvault-client/src/main/java/org/passvault/client/vault/VaultForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.passvault.client.vault.VaultForm">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="660" height="453"/>
@@ -11,113 +11,119 @@
     </properties>
     <border type="none"/>
     <children>
-      <hspacer id="4695a">
+      <splitpane id="46b6f" binding="splitPane">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <grid id="84e69" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="200"/>
+          </grid>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <scrollpane id="aac79">
+          <grid id="84e69" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <splitpane position="left"/>
             </constraints>
-            <properties>
-              <enabled value="true"/>
-              <inheritsPopupMenu value="false"/>
-              <verticalScrollBarPolicy value="22"/>
-            </properties>
-            <border type="none" title="Items"/>
+            <properties/>
+            <border type="none"/>
             <children>
-              <component id="92b80" class="javax.swing.JList" binding="list1" default-binding="true">
+              <scrollpane id="aac79">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <enabled value="true"/>
+                  <inheritsPopupMenu value="false"/>
+                  <verticalScrollBarPolicy value="22"/>
+                </properties>
+                <border type="none" title="Items"/>
+                <children>
+                  <component id="92b80" class="javax.swing.JList" binding="list1" default-binding="true">
+                    <constraints/>
+                    <properties>
+                      <model>
+                        <item value="Instagram.link"/>
+                        <item value="Canvas.link"/>
+                        <item value="Walmart.link"/>
+                        <item value="BestBuy.link"/>
+                        <item value="SECU.link"/>
+                        <item value="Outlook.link"/>
+                        <item value="Amazon.link"/>
+                        <item value="Target.link"/>
+                        <item value="Supreme.link"/>
+                        <item value="Instagram.link"/>
+                        <item value="Canvas.link"/>
+                        <item value="Walmart.link"/>
+                        <item value="BestBuy.link"/>
+                        <item value="SECU.link"/>
+                        <item value="Outlook.link"/>
+                        <item value="Amazon.link"/>
+                        <item value="Target.link"/>
+                        <item value="Supreme.link"/>
+                        <item value="Instagram.link"/>
+                        <item value="Canvas.link"/>
+                        <item value="Walmart.link"/>
+                        <item value="BestBuy.link"/>
+                        <item value="SECU.link"/>
+                        <item value="Outlook.link"/>
+                        <item value="Amazon.link"/>
+                        <item value="Target.link"/>
+                        <item value="Supreme.link"/>
+                        <item value="Instagram.link"/>
+                        <item value="Canvas.link"/>
+                        <item value="Walmart.link"/>
+                        <item value="BestBuy.link"/>
+                        <item value="SECU.link"/>
+                        <item value="Outlook.link"/>
+                        <item value="Amazon.link"/>
+                        <item value="Target.link"/>
+                        <item value="Supreme.link"/>
+                      </model>
+                    </properties>
+                  </component>
+                </children>
+              </scrollpane>
+              <grid id="84d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none" title="Search"/>
+                <children>
+                  <component id="652c3" class="javax.swing.JTextField" binding="searchBarTextField" default-binding="true">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <name value="Search"/>
+                      <text value=""/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
+            </children>
+          </grid>
+          <scrollpane id="adc11" binding="backgroundPane">
+            <constraints>
+              <splitpane position="right"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="3e42f" class="javax.swing.JLabel" binding="backgroundLabel">
                 <constraints/>
                 <properties>
-                  <model>
-                    <item value="Instagram.link"/>
-                    <item value="Canvas.link"/>
-                    <item value="Walmart.link"/>
-                    <item value="BestBuy.link"/>
-                    <item value="SECU.link"/>
-                    <item value="Outlook.link"/>
-                    <item value="Amazon.link"/>
-                    <item value="Target.link"/>
-                    <item value="Supreme.link"/>
-                    <item value="Instagram.link"/>
-                    <item value="Canvas.link"/>
-                    <item value="Walmart.link"/>
-                    <item value="BestBuy.link"/>
-                    <item value="SECU.link"/>
-                    <item value="Outlook.link"/>
-                    <item value="Amazon.link"/>
-                    <item value="Target.link"/>
-                    <item value="Supreme.link"/>
-                    <item value="Instagram.link"/>
-                    <item value="Canvas.link"/>
-                    <item value="Walmart.link"/>
-                    <item value="BestBuy.link"/>
-                    <item value="SECU.link"/>
-                    <item value="Outlook.link"/>
-                    <item value="Amazon.link"/>
-                    <item value="Target.link"/>
-                    <item value="Supreme.link"/>
-                    <item value="Instagram.link"/>
-                    <item value="Canvas.link"/>
-                    <item value="Walmart.link"/>
-                    <item value="BestBuy.link"/>
-                    <item value="SECU.link"/>
-                    <item value="Outlook.link"/>
-                    <item value="Amazon.link"/>
-                    <item value="Target.link"/>
-                    <item value="Supreme.link"/>
-                  </model>
+                  <background color="-16371712"/>
                 </properties>
               </component>
             </children>
           </scrollpane>
-          <grid id="84d" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none" title="Search"/>
-            <children>
-              <component id="652c3" class="javax.swing.JTextField" binding="searchBarTextField" default-binding="true">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <name value="Search"/>
-                  <text value=""/>
-                </properties>
-              </component>
-            </children>
-          </grid>
         </children>
-      </grid>
-      <scrollpane id="adc11" binding="itemPane">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="3e42f" class="javax.swing.JLabel" binding="backgroundLabel" custom-create="true">
-            <constraints/>
-            <properties>
-              <background color="-16371712"/>
-            </properties>
-          </component>
-        </children>
-      </scrollpane>
+      </splitpane>
     </children>
   </grid>
 </form>
