rename "Save" button to "Save Vault" to differenciate it from the Entry Save button

--- a/passvault-client/src/main/java/org/passvault/client/vault/VaultForm.form
+++ b/passvault-client/src/main/java/org/passvault/client/vault/VaultForm.form
@@ -107,10 +107,10 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="9fe88" class="javax.swing.JButton" binding="saveButton" default-binding="true">
+          <component id="9fe88" class="javax.swing.JButton" binding="saveVaultButton">
             <constraints/>
             <properties>
-              <text value="Save"/>
+              <text value="Save Vault"/>
             </properties>
           </component>
           <hspacer id="679e3">
